<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Internet Mobile Robot</string>
    <string name="hello_world">Response</string>
    <string name="action_settings">Settings</string>
    <string name="button_up">Forward</string>
    <string name="button_down">Backward</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="locationBoard1">LocationBoard1</string>
    <string name="locationBoard2">LocationBoard2</string>
    <string name="Behaviour">Behaviour</string>
    
    <string-array name="behaviours">
        <item>remoteControl</item>
        <item>followLine</item>
        <item>followGreen</item>
        <item>aiMode1</item>
    </string-array>

</resources>
